src/test/ui/substs-ppaux.verbose.stderr
error[E0308]: mismatched types
  --> $DIR/substs-ppaux.rs:16:17
   |
LL |     let x: () = <i8 as Foo<'static, 'static,  u8>>::bar::<'static, char>;
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected (), found fn item
   |
   = note: expected type `()`
              found type `fn() {<i8 as Foo<ReStatic, ReStatic, u8>>::bar::<ReStatic, char>}`

error[E0308]: mismatched types
  --> $DIR/substs-ppaux.rs:25:17
   |
LL |     let x: () = <i8 as Foo<'static, 'static,  u32>>::bar::<'static, char>;
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected (), found fn item
   |
   = note: expected type `()`
              found type `fn() {<i8 as Foo<ReStatic, ReStatic>>::bar::<ReStatic, char>}`

error[E0308]: mismatched types
  --> $DIR/substs-ppaux.rs:33:17
   |
LL |     let x: () = <i8 as Foo<'static, 'static,  u8>>::baz;
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected (), found fn item
   |
   = note: expected type `()`
              found type `fn() {<i8 as Foo<ReStatic, ReStatic, u8>>::baz}`

error[E0308]: mismatched types
  --> $DIR/substs-ppaux.rs:41:17
   |
LL |     let x: () = foo::<'static>;
   |                 ^^^^^^^^^^^^^^ expected (), found fn item
   |
   = note: expected type `()`
              found type `fn() {foo::<ReStatic>}`

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/substs-ppaux.rs:49:5
   |
LL |     <str as Foo<u8>>::bar;
   |     ^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `str`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: required because of the requirements on the impl of `Foo<'_#0r, '_#1r, u8>` for `str`
note: required by `Foo::bar`
  --> $DIR/substs-ppaux.rs:7:5
   |
LL |     fn bar<'a, T>() where T: 'a {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
